changes to InventoryScreen